# CallBot

./: .env.example  .gitignore  CLAUDE.md  README.md  instruction.md  prompt.md  pyproject.toml  repo_structure.md  requirements.txt  script.md  voice_flow_problem.md
core/: __init__.py  config.py
core/agent/: __init__.py  dispatcher.py  prompts.py  tool_text.py  tools.py
core/booking/: __init__.py  db.py  models.py  proxy_service.py  repository.py
scripts/: deploy_vps.sh  guardrail.sh  install_coturn.sh  seed_test_request.py  tunnel.py  upgrade_booking_schema.sql  vps_info.sh
server/: __init__.py  __main__.py  app.py  logging_setup.py
testclient/: README.md  index.html
tests/: test_booking_request_persistence.py  test_booking_request_service.py  test_db_backends.py  test_key_rotation.py  test_layer_isolation.py  test_logging_setup.py  test_proxy_agent_dispatcher.py  test_proxy_call_end_to_end.py  test_server.py  test_tool_call_sanitizer.py  test_voice_pipeline.py
tools/: __init__.py  _selftest_call_flows.py  call_test_results.json  call_test_transcript.md  groq_limits.py  latency_probe.py  test_call_flows.py
transport/: __init__.py  web.py
voice/: __init__.py  config.py  key_rotation.py  pipeline.py  rotating_groq.py  tool_call_sanitizer.py
